# lsm

./: .gitignore  LICENSE  README.md  docker-compose.yml  go.mod  notes.md  package-lock.json
.github/workflow/: registry.yml
.github/workflows/: docker.yml  registry.yml
a/: default.vcl  default3.vcl  package.json
api/: Dockerfile  README.md  crontab  default.vcl  entrypoint.sh  package-lock.json  package.json  remote_osv.sh  tsconfig.json  update_cve.sh  update_osv.sh  vmod_body.c
api/db/: init.sql
api/osv_sample/: GHSA-9jff-8xmm-mw22.json  GHSA-9jfq-54vc-9rr2.json  GHSA-9jg9-6wm2-x7p5.json  GHSA-9jh5-qf84-x6pr.json  GHSA-9jhm-8m8c-c3f4.json  GHSA-9jjr-qqfp-ppwx.json
api/src/: constants.ts  db.ts  flow.ts  (+4 more)
api_debug/: Dockerfile  docker-compose.yml  index.js  package-lock.json  varnish.vcl
db/: init.sql
sample/: deps.json  dockerMetadata.json  fullMetadata.json  metadata.json  metadataSimple.json  simpleWorkerTestData.json  vulnerability.json
src/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json  types.d.ts  worker.spec.ts  worker.ts
steps/: one-fetch_google.ts
support/: package-lock.json  package.json  tsconfig.json
tests/rust/: Cargo.toml  setup-dangerous.sh  setup.sh
tests/rust/.cargo/: config.toml  creds.toml
ui/: Dockerfile  README.md  constants.ts  default.vcl  entrypoint.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  types.d.ts
worker/: interfaces.ts  manifest.json  package-lock.json  package.json  tsconfig.json  types.d.ts  worker.spec.ts  worker.ts
(+207 files in other folders)
